--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -19,5 +19,6 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
+          pwd
       - name: Run python unit tests
         run: venv/bin/python -m unittest discover -s test
