Add: Bounding Box class

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -21,4 +21,4 @@ jobs:
           pip install -r requirements.txt
           pwd
       - name: Run python unit tests
-        run: venv/bin/python -m unittest discover -s test
+        run: venv/bin/python -m unittest discover -s ./test
