Add: Bounding Box class

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install pytorch
         run: |
           source venv/bin/activate
-          pip install torch==1.8.1+cpu torchvision==0.9.1+cpu torchaudio==0.8.1 -f https://download.pytorch.org/whl/torch_stable.html
+          pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
       - name: Run python unit tests
         run:
           source venv/bin/activate 
