--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -24,6 +24,6 @@ jobs:
           source venv/bin/activate
           pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
       - name: Run python unit tests
-        run:
+        run: |
           source venv/bin/activate 
           venv/bin/python -m unittest discover -s test
