--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-            python-version: '3.13.0-alpha.1'
+            python-version: '3.12.0'
             architecture: 'arm64'
       - name: Install dependencies
         run: |
