Removing unit workflow for a minute

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
           pip install -r ./docs/requirements.txt
       - name: Sphinx build
         run: |
+          source venv/bin/activate
           sphinx-build ./docs/source _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
