--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,9 @@
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: ["feature/**"]
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
