Removing unit workflow for a minute

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,6 @@
 on:
   # Runs on pushes targeting the default branch
-  pull_request:
-    types: [opened, synchronize, reopened]
+  push:
     branches:
       - main
 
