--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,3 +1,5 @@
+name: Deploy Docs to GitHub Pages
+
 on:
   # Runs on pushes targeting the default branch
   push:
@@ -35,11 +37,19 @@ jobs:
         run: |
           python3 -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip3 install -r requirements.txt
+      - name: Install PyTorch 
+        run: |
+          source venv/bin/activate
+          pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+      - name: Install yolo 
+        run: |
+          source venv/bin/activate
+          pip3 install .
       - name: Install docs dependencies
         run: |
           source venv/bin/activate
-          pip install -r ./docs/requirements.txt
+          pip3 install -r ./docs/requirements.txt
       - name: Sphinx build
         run: |
           source venv/bin/activate
